--- a/README
+++ b/README
@@ -2,6 +2,7 @@
 ------------------------------
 --     OpenMS library       --
 ------------------------------
+essai
 
 
 This directory contains the source code of OpenMS.
